# CMakeEmbedResource

./: CMakeLists.txt
resources/folder/folder with space/: file with space.txt
src/: main.cpp
tools/: resource_embedder.cmake  resource_embedder.cpp
